--- a/style3.css
+++ b/style3.css
@@ -1,129 +1,186 @@
-body {
-  font-family: "Courier New", Courier, monospace;
-  background: linear-gradient(140deg, #00ffff, #a0e09e);
-  margin: 0;
-  padding: 0;
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
+*
+{
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: 'Quicksand', sans-serif;
+}
+.container{
+  position: relative;
+  top: -700px;
+  left: 1400px;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
 }
-
-main {
+.container a{
+  width: 270px;
+  height: 80px;
   position: relative;
-  margin-top: 300px;
-  display: flex;
-  flex-direction: row;
-  gap: 200px;
-  left: 290px;
-  top: -300px;
+  display: inline-block;
+  padding: 15px 30px;
+  border: 2px solid #0f0;
+  margin: 40px;
+  text-transform: uppercase;
+  font-weight: 600;
+  text-decoration: none;
+  letter-spacing: 2px;
+  color: #fff;
+  -webkit-box-reflect: below 1px linear-gradient(transparent, #0002);
+  transition: 0.5s;
 }
-
-/* CSS to style the vertical dashed line */
-.dashed-line {
+.contaner a:nth-child(2){
+  filter: hue-rotate(80deg);
+}
+.container a span{
+  font-size: 25px;
   position: relative;
-  color: #050000;
-  background-color: #050000;
-  border-style: dashed;
-  border-width: 1px; /* Optional: adjust the width of the line */
-  height: 50px; /* Optional: adjust the height of the line */
-  width: 1px;
-  height: 330px;
-  left: 280px;
-  top: -300px;
+  z-index: 100;
+  left: 60px;
+  bottom: -1px;
+}
+.container a:hover{
+  transition-delay: 0.9s;
+  color: #000;
+  box-shadow: 0 0 10px #0f0,
+  0 0 20px #0f0,
+  0 0 40px #0f0,
+  0 0 80px #0f0,
+  0 0 160px #0f0;
 }
 
-.vertical {
-  transform: rotate(180deg);
-}
-
-h2 {
-  position: relative;
-  top: -50px;
-  left: 550px;
-  font-size: 100px;
-}
-
-header button {
-  background-color: #9dc5e6;
-  color: #050000;
-  font-size: 16px;
-  font-weight: bold;
-  border: none;
-  border-radius: 25px;
-  padding: 10px 20px;
-  cursor: pointer;
-  width: 220px;
-  position: relative;
-  left: 1500px;
-  top: -200px;
-}
-
-header button:hover {
-  background-color: #c54891;
-}
-
-header button::before {
+.container a::before {
   content: '';
   position: absolute;
-  top: -10px;
-  left: -10px;
-  width: calc(100% + 20px);
-  height: calc(100% + 20px);
-  border-radius: 35px;
-  background-color: rgba(255, 255, 255, 0.2);
-  opacity: 0;
-  transition: opacity 0.2s ease-in-out;
-}
-
-header button:hover::before {
-  opacity: 1;
-}
-
-header button i {
-  margin-right: 5px;
-}
-
-header button:hover::after {
-  content: attr(data-name);
-  position: absolute;
+  left: -20px;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 14px;
-  font-weight: normal;
-  background-color: lightcoral;
-  padding: 5px 10px;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  z-index: 1;
+  transform: translateY(-49%);
+  width: 20px;
+  height: 2px;
+  background: #0f0;
+  box-shadow: 5px -8px 0 #0f0, 5px 8px 0 #0f0;
+  transition: width 0.5s, left 0.5s,  height 0.5s, box-shadow 0.5s;
+  transition-delay: 1s,0.5s,0s,0s;
+}
+.container a:hover::before{
+  width: 60%;
+  height: 100%;
+  left: -2px; 
+  box-shadow: 5px 0 0 #0f0,
+              5px 0 0 #0f0;
+  transition-delay: 0s,0.5s,1s,1s;
 }
 
-nav ul {
-  margin: 0;
-  padding: 0px;
-  list-style: none;
+.container a::after {
+  content: '';
+  position: absolute;
+  right: -20px;
+  top: 50%;
+  transform: translateY(-49%);
+  width: 20px;
+  height: 2px;
+  background: #0f0;
+  box-shadow: -5px -8px 0 #0f0, -5px 8px 0 #0f0;
+  transition: width 0.5s, left 0.5s,  height 0.5s, box-shadow 0.5s;
+  transition-delay: 1s,0.5s,0s,0s;
+}
+.container a:hover::after{
+  width: 60%;
+  height: 100%;
+  right: -2px;
+  box-shadow: 5px 0 0 #0f0,
+              5px 0 0 #0f0;
+  transition-delay: 0s,0.5s,1s,1s;
+}
+
+body {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: black;
+  overflow: hidden;
 }
 
+.testimonials {
+  position: relative;
+  width: 700px;
+  left: -200px;
+}
+
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 350px; 
+  margin: 0 20px;
+  background: white;
+  -webkit-box-reflect: below 1px linear-gradient(transparent 70%, #0009);
+}
+
+
+
+.swiper-container-3d .swiper-slide-shadow-left,
+.swiper-container-3d .swiper-slide-shadow-right {
+  background-image: none;
+}
+
+.testimonials .card {
+  position: relative;
+  width: 100%;
+  height: 800px;
+  margin: 0 auto;
+  background: #333;
+  padding: 60px 40px;
+  text-align: center;
+  overflow: hidden;
+}
+
+.testimonials .card .layer {
+  position: absolute;
+  top: calc(100% - 2px);
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(#03a9f4, #e91ee3);
+  z-index: 1;
+  transition: 0.5s;
+}
+.testimonials .card:hover .layer{
+  top: 0;
+}
+.testimonials .card .content{
+  position: relative;
+  z-index: 2;
+}
+.testimonials .card .content p{
+  font-size: 32px;
+  line-height: 38px;
+  margin-bottom: 20px;
+  color: white;
+}
+.testimonials .card .content .imgbox{
+  margin: 0 auto 50px;
+}
 img {
-  max-width: 100%;
-  height: auto;
-  max-height: 100px;
-  display: block;
-  margin-bottom: 0.5rem;
+  width: 350px;
+  height: 350px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 4px solid white;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
-
-.reviewer {
-  margin: 1rem 0;
+.testimonials .card .content h2{
+  font-size: 38px;
+  color: white;
 }
-
-.review {
-  text-align: left;
-  margin-top: 0;
+.testimonials .card .content h2 span{
+  color: skyblue;
+  font-size: 34px;
+  transition: 0.5s;
 }
-
-@media screen and (max-width: 767px) {
-  div {
-    width: 100%;
-    margin-right: 0;
-  }
+.testimonials .card:hover .content h2 span{
+  color: whitesmoke;
 }
